rewrite actions on list items

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -11,6 +11,7 @@
         <file alias="FeedFolder.qml">contents/ui/FeedFolder.qml</file>
         <file alias="Feed.qml">contents/ui/Feed.qml</file>
         <file alias="Article.qml">contents/ui/Article.qml</file>
+        <file alias="ArticleActions.qml">contents/ui/ArticleActions.qml</file>
         <file alias="ArticleMedia.qml">contents/ui/ArticleMedia.qml</file>
         <file alias="ArticleYoutube.qml">contents/ui/ArticleYoutube.qml</file>
         <file alias="BrowserView.qml">contents/ui/BrowserView.qml</file>
