--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -8,6 +8,8 @@
         <file alias="About.qml">contents/ui/About.qml</file>
         <file alias="AddFeed.qml">contents/ui/AddFeed.qml</file>
         <file alias="AddFolder.qml">contents/ui/AddFolder.qml</file>
+        <file alias="EditFeed.qml">contents/ui/EditFeed.qml</file>
+        <file alias="FeedForm.qml">contents/ui/FeedForm.qml</file>
         <file alias="FeedFolder.qml">contents/ui/FeedFolder.qml</file>
         <file alias="Feed.qml">contents/ui/Feed.qml</file>
         <file alias="Article.qml">contents/ui/Article.qml</file>
