--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -14,6 +14,7 @@
         <file alias="Feed.qml">contents/ui/Feed.qml</file>
         <file alias="Article.qml">contents/ui/Article.qml</file>
         <file alias="ArticleActions.qml">contents/ui/ArticleActions.qml</file>
+        <file alias="ArticleEnclosure.qml">contents/ui/ArticleEnclosure.qml</file>
         <file alias="ArticleMedia.qml">contents/ui/ArticleMedia.qml</file>
         <file alias="ArticleYoutube.qml">contents/ui/ArticleYoutube.qml</file>
         <file alias="BrowserView.qml">contents/ui/BrowserView.qml</file>
