--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -17,6 +17,8 @@
         <file alias="ArticleEnclosure.qml">contents/ui/ArticleEnclosure.qml</file>
         <file alias="ArticleMedia.qml">contents/ui/ArticleMedia.qml</file>
         <file alias="ArticleYoutube.qml">contents/ui/ArticleYoutube.qml</file>
+        <file alias="ArticleMediaContent.qml">contents/ui/ArticleMediaContent.qml</file>
+        <file alias="ArticleMediaEmbed.qml">contents/ui/ArticleMediaEmbed.qml</file>
         <file alias="BrowserView.qml">contents/ui/BrowserView.qml</file>
         <file alias="RssTextInput.qml">contents/ui/RssTextInput.qml</file>
     </qresource>
