--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -25,6 +25,7 @@
         <file alias="UnreadCountBox.qml">contents/ui/UnreadCountBox.qml</file>
         <file alias="FeedSearchField.qml">contents/ui/FeedSearchField.qml</file>
         <file alias="FeedActions.qml">contents/ui/FeedActions.qml</file>
+        <file alias="AppWebView.qml">contents/ui/AppWebView.qml</file>
     </qresource>
     <qresource prefix="/icons">
         <file alias="feed.png">contents/icons/feed.png</file>
