--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -11,6 +11,7 @@
         <file alias="EditFeed.qml">contents/ui/EditFeed.qml</file>
         <file alias="EditFolder.qml">contents/ui/EditFolder.qml</file>
         <file alias="FeedForm.qml">contents/ui/FeedForm.qml</file>
+        <file alias="TtlSettingsForm.qml">contents/ui/TtlSettingsForm.qml</file>
         <file alias="FolderListPage.qml">contents/ui/FolderListPage.qml</file>
         <file alias="FolderTreePage.qml">contents/ui/FolderTreePage.qml</file>
         <file alias="Feed.qml">contents/ui/Feed.qml</file>
