--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -30,11 +30,12 @@
         <file alias="FeedActions.qml">contents/ui/FeedActions.qml</file>
         <file alias="FolderActions.qml">contents/ui/FolderActions.qml</file>
         <file alias="AppWebView.qml">contents/ui/AppWebView.qml</file>
-        <file alias="FolderTreeView.qml">contents/ui/FolderTreeView.qml</file>
         <file alias="Breadcrumbs.qml">contents/ui/Breadcrumbs.qml</file>
         <file alias="MainMenuBar.qml">contents/ui/MainMenuBar.qml</file>
         <file alias="PageMenu.qml">contents/ui/PageMenu.qml</file>
         <file alias="ListItemDelegate.qml">contents/ui/ListItemDelegate.qml</file>
+        <file alias="TreeItemDelegate.qml">contents/ui/TreeItemDelegate.qml</file>
+        <file alias="SortableFolderTree.qml">contents/ui/SortableFolderTree.qml</file>
     </qresource>
     <qresource prefix="/icons">
         <file alias="feed.png">contents/icons/feed.png</file>
