--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -26,6 +26,7 @@
         <file alias="ArticleMediaEmbed.qml">contents/ui/ArticleMediaEmbed.qml</file>
         <file alias="BrowserView.qml">contents/ui/BrowserView.qml</file>
         <file alias="BrowserArticleView.qml">contents/ui/BrowserArticleView.qml</file>
+        <file alias="Comments.qml">contents/ui/Comments.qml</file>
         <file alias="RssTextInput.qml">contents/ui/RssTextInput.qml</file>
         <file alias="UnreadCountBox.qml">contents/ui/UnreadCountBox.qml</file>
         <file alias="FeedSearchField.qml">contents/ui/FeedSearchField.qml</file>
