redesign breadcrumbs and metadata display in article views

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -14,6 +14,8 @@
         <file alias="AggregatedFeed.qml">contents/ui/AggregatedFeed.qml</file>
         <file alias="Article.qml">contents/ui/Article.qml</file>
         <file alias="ArticleActions.qml">contents/ui/ArticleActions.qml</file>
+        <file alias="ArticleInfobar.qml">contents/ui/ArticleInfobar.qml</file>
+        <file alias="ArticleMetadata.qml">contents/ui/ArticleMetadata.qml</file>
         <file alias="ArticleEnclosure.qml">contents/ui/ArticleEnclosure.qml</file>
         <file alias="ArticleImageEnclosure.qml">contents/ui/ArticleImageEnclosure.qml</file>
         <file alias="ArticleMedia.qml">contents/ui/ArticleMedia.qml</file>
